--- a/docs/bib.bib
+++ b/docs/bib.bib
@@ -8,3 +8,13 @@
   year={2010},
   organization={Cone Penetration Testing Organizing Committee Huntington Beach}
 }
+
+@techreport{ISO19901_4,
+type = {Standard},
+author = {ISO/DIS 19901-4,},
+month = Aug,
+year = {2022},
+title = {Petroleum and Natural Gas Industruies - Specific Requirement for Offshore Strucutres},
+volume = {2002},
+institution = {International Organization for Standardization}
+}
