Udated calculation steps for p-y-sand

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,26 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'pdfkit'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-10-0b9697c278e5>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mplotly\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mio\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mpio\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mpdfkit\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'pdfkit'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from dlpkg.cpt import CPT\n",
     "from pathlib import Path\n",
     "import os\n",
-    "import plotly.io as pio"
+    "import plotly.io as pio\n",
+    "import p_y_sand\n"
    ]
   },
   {
@@ -43,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,14 +103,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "23-10-12 10:14:30 -c:\\Users\\Emma.Shi\\Desktop\\CPT\\UnitCPT\\dlpkg\\cpt.py:327 DEBUG - Data unit is set to ['MPa', 'MPa', 'MPa']\n"
+      "23-10-16 11:27:28 -c:\\Users\\Emma.Shi\\Desktop\\CPT\\UnitCPT\\dlpkg\\cpt.py:327 DEBUG - Data unit is set to ['MPa', 'MPa', 'MPa']\n"
      ]
     }
    ],
@@ -131,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +131,7 @@
       "\n",
       "invalid value encountered in log10\n",
       "\n",
-      "23-10-12 10:14:33 -c:\\Users\\Emma.Shi\\Desktop\\CPT\\UnitCPT\\dlpkg\\cpt.py:156 DEBUG - qt calculated using net area ratio of 0.85\n"
+      "23-10-16 11:27:33 -c:\\Users\\Emma.Shi\\Desktop\\CPT\\UnitCPT\\dlpkg\\cpt.py:156 DEBUG - qt calculated using net area ratio of 0.85\n"
      ]
     }
    ],
@@ -162,7 +151,53 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Emma.Shi\\Desktop\\CPT\\UnitCPT\\p_y_sand.py:14: RuntimeWarning:\n",
+      "\n",
+      "invalid value encountered in log10\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "cpt_data.df ['phi_e'] = cpt_data.df.apply(lambda row:p_y_sand.calc_phi_e(qt = row['qt'], sigma_v = row['sigma_v'], sigma_v_e = row['sigma_v_e']), axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "d4cea0f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cpt_data.df ['C1'] = cpt_data.df.apply(lambda row:p_y_sand.calc_C1(phi_e = row['phi_e']), axis = 1)\n",
+    "cpt_data.df ['C2'] = cpt_data.df.apply(lambda row:p_y_sand.calc_C2(phi_e = row['phi_e']), axis = 1)\n",
+    "cpt_data.df ['C3'] = cpt_data.df.apply(lambda row:p_y_sand.calc_C3(phi_e = row['phi_e']), axis = 1)\n",
+    "cpt_data.df ['k'] = cpt_data.df.apply(lambda row:p_y_sand.calc_k(phi_e = row['phi_e']), axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "4f3b8b62",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cpt_data.df ['pr'] = cpt_data.df.apply(lambda row:p_y_sand.calc_pr(D = 2.032, gamma = row['gamma'], z = row['SCPT_DPTH'], C1 = row['C1'], C2 = row['C2'], C3 = row['C3']), axis = 1)\n",
+    "cpt_data.df ['A'] = cpt_data.df.apply(lambda row:p_y_sand.calc_A(D = 2.032, z = row['SCPT_DPTH'], loading = 'Monotonic'), axis = 1)\n",
+    "cpt_data.df ['p'] = cpt_data.df.apply(lambda row:p_y_sand.calc_p(y = 10.16, A = row['A'], pr = row['pr'], z = row['SCPT_DPTH'], k = row['k']), axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
+   "id": "04585369",
    "metadata": {},
    "outputs": [],
    "source": []
