--- a/p-y-sand.ipynb
+++ b/p-y-sand.ipynb
@@ -8,19 +8,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Notes\n",
+    "\n",
+    "Need to run the code below again to reinstall the package\n",
+    "\n",
+    "```shell\n",
+    "pip install -e . \n",
+    "```\n",
+    "\n",
+    "The code has been moved to the source folder for house keeping"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dlpkg.cpt import CPT\n",
+    "from src.cpt import CPT\n",
     "from pathlib import Path\n",
     "import os\n",
     "import plotly.io as pio\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from numpy import degrees, log10, pi, radians, tan, sin, cos\n",
-    "from p_y_sand import *"
+    "from src.p_y_sand import *\n",
+    "from src.pile import PipePile"
    ]
   },
   {
@@ -999,6 +1015,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
@@ -1017,7 +1038,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
