experimented the hmtl function

--- a/docs/CPT.bib
+++ b/docs/CPT.bib
@@ -12,12 +12,26 @@
   publisher = {Elsevier {BV}},
 }
 
-@Book{Roberson2022,
-  author    = {P. K. Roberson and K. Cabal},
-  publisher = {Gregg Drilling LLC},
-  title     = {Guide to {C}one {P}enetration {T}esting -7th {E}dition},
-  year      = {2022},
-  file      = {:C\:/Users/dazhong.li/Downloads/CPT-Guide-7th-Final-2022.pdf:PDF},
+@TechReport{Oasys2022,
+  author = {Oasys},
+  title  = {A{LP} 20.0 {H}elp {G}uide},
+  year   = {2022},
+  file   = {:pdfs/Oaysis2022ALP.pdf:PDF},
+}
+
+@TechReport{ISO19901_4,
+  author = {{ISO/DIS 19901-4:2022(E)}},
+  title  = {{Petroleum and natural gas industries — Specific requirements for offshore structures —Part 4: Geotechnical design considerations}},
+  year   = {2022},
+  file   = {:pdfs/ISO1990142022.pdf:PDF},
+}
+
+@TechReport{Robertson2022,
+  author      = {P.K Robertson, K. Cabal},
+  institution = {{Gregg Drilling LLC}},
+  title       = {{Cone Penetration Testing 7th Edition}},
+  year        = {2022},
+  file        = {:pdfs/Robertson2022.pdf:PDF},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
