--- a/src/220201-DL-Pile Capacity.ipynb
+++ b/src/220201-DL-Pile Capacity.ipynb
@@ -320,30 +320,7 @@
    "execution_count": 110,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\n",
-    "df = pd.read_excel(r'./CPT_smoothed_sand.xlsx')\n",
-    "CPT_smoothed = CPT()\n",
-    "CPT_smoothed.df = df\n",
-    "# CPT_smoothed.plot_ags_cpt()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 111,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "23-02-01 18:45:22 -C:\\Users\\dazhong.li\\OneDrive\\02-Projects\\01-Offshore CPT\\Offshore-CPT\\src\\cpt.py:293 DEBUG - Data unit is set to ['MPa', 'kPa', 'kPa']\n"
-     ]
-    }
-   ],
-   "source": [
-    "CPT_smoothed.set_data_unit(unit=['MPa','kPa','kPa'])"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -371,6 +348,11 @@
     }
    ],
    "source": [
+    "df = pd.read_excel(r'./CPT_smoothed_sand.xlsx')\n",
+    "CPT_smoothed = CPT()\n",
+    "CPT_smoothed.df = df\n",
+    "# CPT_smoothed.plot_ags_cpt()\n",
+    "CPT_smoothed.set_data_unit(unit=['MPa','kPa','kPa'])\n",
     "CPT_smoothed.init_CPT()"
    ]
   },
